[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Production-ready multi-agent system for Munder Difflin Paper Company"
authors = [
    { name = "Muhammad Afaq", email = "muhammadafaq1999@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "celery>=5.3.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "kombu>=5.3.0",
    "numpy>=1.26.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-sdk>=1.21.0",
    "pandas>=2.1.0",
    "prometheus-client>=0.19.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.7",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "structlog>=23.2.0",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "ipdb>=0.13.13",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "rich>=13.7.0",
    "ruff>=0.1.0",
    "types-python-dateutil>=2.8.19",
    "types-pytz>=2023.3.1",
    "types-redis>=4.6.0",
]


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PD",     # pandas-vet
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in argument defaults
    "RUF012", # Mutable class attributes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = [
    "ARG",    # Unused arguments in tests
    "S101",   # Use of assert
]

[tool.ruff.lint.isort]
known-first-party = ["multi_agent_system"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "celery.*",
    "kombu.*",
    "pydantic_ai.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",               # Show extra test summary info
    "-q",                # Quiet mode
    "--strict-markers",  # Require markers to be registered
    "--strict-config",   # Fail on invalid config
    "--cov=src/multi_agent_system",  # Coverage source
    "--cov-report=term-missing",     # Show missing lines
    "--cov-report=html",             # HTML report
    "--cov-report=xml",              # XML report (for CI)
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Tests that take a long time to run",
]


[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]


[project.scripts]
multi-agent-system = "multi_agent_system.main:main"
mas-api = "multi_agent_system.api.app:run"
mas-worker = "multi_agent_system.tasks:run_worker"
mas-migrate = "multi_agent_system.database.migrations.cli:main"